# cwt-cucumber

./: .clang-format  .clang-tidy  .deepsource.toml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile  LICENSE  README.md  azure-pipelines.yml  conanfile.txt  test.feature  test.lox
.github/: STYLE_CONSISTENCY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: copilot-setup-steps.yml  docs.yml  format.yml  lint.yml  main.yml  unittests.yml
dockerfiles/docs/: Dockerfile
dockerfiles/linux/: Dockerfile
docs/: Doxyfile  conf.py  index.rst
docs/chapters/: 00_intro.rst  01_cwt_cucumber.rst  01_getting_started.rst  02_conan.rst  02_cpp.rst  02_cpp_api.rst  03_c.rst  03_c_api.rst  04_api.rst  (+8 more)
example/: CMakeLists.txt  example.feature  example2.feature  example3.feature  main.c  main.cpp
examples/: CMakeLists.txt  box.feature  box.hpp  custom_parameters.cpp  hooks.cpp  step_custom_parameters.cpp  step_definition.cpp
examples/c/: CMakeLists.txt  box.c  box.h  main.c  step_definition.c  step_definition.h
examples/cpp/: CMakeLists.txt  box.hpp  step_definition.cpp
examples/features/: 10_continue_on_failure.feature  11_manual_fails.feature  1_first_scenario.feature  1_hello_cucumber.feature  2_scenario_outline.feature  3_background.feature  4_tags.feature  5_tagged_hooks.feature  6_tables.feature  7_doc_strings.feature  8_custom_parameters.feature  9_rules.feature  background.feature  box.feature  box_outline.feature  doc_string.feature  failing_example.feature  first_example.feature  hallo_welt.feature  hello_world.feature  scenario_outline.feature  string.feature  tags.feature
gtest/: CMakeLists.txt  any.cc  ast.cc  ast_visitor.cc  background.cc  catalog.cc  chunk.cc  compile_errors.cc  compiler.cc  compiler2.cc  compiler_datatables.cc  compiler_feature.cc  compiler_ignore_descriptions.cc  compiler_quiet.cc  compiler_scenario.cc  compiler_scenario_outline.cc  compiler_scenario_outline_and_scenario_w_tags.cc  compiler_scenario_outline_strings.cc  compiler_scenario_outline_w_examples_tags.cc  compiler_scenario_outline_w_examples_tags_2.cc  compiler_scenario_outline_w_tags.cc  compiler_scenario_outline_w_tags_2.cc  compiler_scenario_w_background.cc  compiler_simple_scenario_outline.cc  compiler_single_lines.cc  compiler_tables.cc  compiler_tagged_feature.cc  context.cc  cpp_bindings.cc  cpp_scenario_context.cc  debug.cc  file_io.cc  help_screen.cc  hooks.cc  hooks_scenario_outline.cc  hooks_with_tags.cc  name_filter.cc  options.cc  paths.hpp  paths.hpp.template  (+48 more)
gtest/compiler/: compiler.cc  feature.cc  ignore_descriptions.cc  quiet.cc  scenario.cc  scenario_outline.cc  scenario_outline_and_scenario_w_tags.cc  scenario_outline_strings.cc  scenario_outline_w_examples_tags.cc  scenario_outline_w_examples_tags_2.cc  scenario_outline_w_tags.cc  scenario_outline_w_tags_2.cc  scenario_w_background.cc  single_lines.cc  tables.cc  tagged_feature.cc
gtest/cpp_test_features/: a_million_steps.feature  simple_scenarios.feature
gtest/hooks/: hooks.cc  hooks_scenario_outline.cc  hooks_with_tags.cc
gtest/legacy/: cpp_scenario_context.cc  hooks.cc  paths.hpp  run_scenarios.cc  run_single_scenario.cc  runtime_tags.cc  syntax_errors.cc
gtest/scanner/: english.cc  german.cc  scanner.cc  set_langauge.cc  spanish.cc
gtest/test_files/: example.feature  fail.feature  skip.feature
gtest/vm/: asserts.cc  check_results.cc  context.cc  get_args.cc  options_line.cc  options_quiet.cc  options_tags.cc  run_scenarios.cc  run_w_background.cc  tables.cc  vm.cc
src/: CMakeLists.txt  CucumberConfig.cmake.in  CwTCucumberConfig.cmake.in  _chunk.cpp  _chunk.hpp  _vm.cpp  _vm.hpp  any.hpp  asserts.hpp  ast.cpp  ast.hpp  catalog.cpp  catalog.hpp  chunk.c  chunk.cpp  chunk.h  chunk.hpp  common.h  compiler.c  compiler.h  context.cpp  context.hpp  cucumber.cpp  cucumber.hpp  cwt-cucumber-config.cmake.in  cwt_cucumber.c  cwt_cucumber.h  cwt_cucumber_value.h  cwtcucumber-config.cmake.in  debug.c  debug.hpp  defines.hpp  expression.hpp  file.hpp  function.hpp  get_args.hpp  hooks.hpp  lexer.cpp  lexer.hpp  log.hpp  (+52 more)
src/ast/: ast.hpp  compiler.hpp  parser.hpp  registry.hpp  test_results.cpp  test_results.hpp  test_runner.hpp
src/compiler/: background.cpp  background.hpp  compiler.cpp  compiler.hpp  cucumber.cpp  cucumber.hpp  examples.cpp  examples.hpp  feature.cpp  feature.hpp  scenario.cpp  scenario.hpp  scenario_outline.cpp  scenario_outline.hpp  step.hpp  tags.cpp  tags.hpp
src/cwt/: CMakeLists.txt  asserts.hpp  chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  compiler_feature.cpp  compiler_main.cpp  compiler_scenario.cpp  context.hpp  cucumber.h  cucumber.hpp  cucumber_asserts.hpp  cucumber_context.hpp  cucumber_error.hpp  cucumber_value.h  cuke_tests.hpp  debug.hpp  defines.hpp  function.hpp  get_args.hpp  hooks.hpp  identifier.hpp  main.cpp  object.hpp  options.cpp  options.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  step_finder.cpp  step_finder.hpp  tags.hpp  token.hpp  util.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
src/cwt/compiler/: background.cpp  background.hpp  compiler.cpp  compiler.hpp  cucumber.cpp  cucumber.hpp  cuke_compiler.cpp  cuke_compiler.hpp  examples.cpp  examples.hpp  feature.cpp  feature.hpp  scenario.cpp  scenario.hpp  scenario_outline.cpp  scenario_outline.hpp  step.hpp  tags.cpp  tags.hpp
src/cwt/identifiers/: bool_operators.hpp  english.hpp  german.hpp  identifier.hpp  spanish.hpp
src/cwt/implementation/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  cucumber.c  cucumber.cpp  cuke_tests.cpp  debug.c  debug.h  main.cpp  object.c  object.h  prints.c  prints.h  program_options.c  program_options.h  scanner.c  scanner.h  step_matcher.c  step_matcher.h  table.c  table.h  tag_compiler.h  tag_scanner.c  tag_scanner.h  value.c  value.h  vm.c  vm.h
src/identifiers/: bool_operators.hpp  english.hpp  german.hpp  identifier.hpp  spanish.hpp
stress-tests/: CMakeLists.txt  hooks.cpp  step_definition.cpp
(+29 files in other folders)
